fix(readers): simplify caching logic and remove unused methods in CbxReaderService and PdfReaderService